[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.1",
    "requests>=2.32.3",
    "selenium>=4.33.0",
    "trafilatura>=2.0.0",
    "webdriver-manager>=4.0.2",
    "psycopg2-binary>=2.9.10",
    "flask-cors>=6.0.0",
    "sqlalchemy>=2.0.41",
    "flask-dance>=7.1.0",
    "flask-login>=0.6.3",
    "oauthlib>=3.2.2",
    "pyjwt>=2.10.1",
    "psutil>=7.0.0",
]
